<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wastetracking.wastetracking.MainActivity"
    tools:showIn="@layout/activity_main">

    <!-- Old for now, keep as reminder
    <TextView
        android:id="@+id/main_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> -->

    <ImageButton
        android:id="@+id/left_arrow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/left_arrow"
        android:layout_marginTop="5dp">
    </ImageButton>

    <TextView
        android:id="@+id/date_text"
        android:layout_height="45dp"
        android:layout_width="fill_parent"
        android:text="text"
        android:textSize="20dp"
        android:gravity="center">
    </TextView>

    <ImageButton
        android:id="@+id/right_arrow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/right_arrow"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true">
    </ImageButton>

    <TextView
        android:id="@+id/listview_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Missing Bins"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@id/date_text"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listview_header"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listview_scan_log"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:transcriptMode="alwaysScroll">

        </ListView>

    </LinearLayout>

    <com.wastetracking.wastetracking.NonSwipePageViewer
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/general_view_pager">

    </com.wastetracking.wastetracking.NonSwipePageViewer>

</android.widget.RelativeLayout>
