<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!--
        <com.github.lzyzsd.circleprogress.ArcProgress
            android:id="@+id/arc_progress"
            android:layout_marginTop="80dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            custom:arc_progress="55"
            app:arc_unfinished_color="#e98f8a"
            app:arc_text_color="@color/white"
            app:arc_finished_color="@color/white"
            app:arc_text_size="50dp"
            app:arc_stroke_width="8dp"
            app:arc_suffix_text_padding="15dp"
            custom:arc_bottom_text="MISSED"/>
            -->

        <ImageView
            android:layout_marginTop="80dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_delete_black_24dp" />

        <com.wastetracking.wastetracking.customfonts.MyTextView_Roboto_Medium
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="LittR"
            android:textColor="@color/white"
            android:textSize="36dp" />

        <com.wastetracking.wastetracking.customfonts.MyTextView_Roboto_Regular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="Dashboard, all your essentials in one place."
            android:textColor="@color/white"
            android:textSize="13dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="center"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/to_do_list_touch">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_list" />

                <com.wastetracking.wastetracking.customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="To-do List"
                    android:textColor="@color/black"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/map_overview_touch">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_map_location" />

                <com.wastetracking.wastetracking.customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:text="Map Overview"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="center"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/phone_touch">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_phone_receiver" />

                <com.wastetracking.wastetracking.customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:text="Make Call"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/sms_touch">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_smartphone" />

                <com.wastetracking.wastetracking.customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:text="Send Text"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>