...
            android:paddingRight="50dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/white_rectangle"
            android:id="@+id/login_button"/>

        <com.wastetracking.wastetracking.customfonts.MyTextView_Roboto_Regular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
...
